--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -26,7 +26,7 @@
             android:layout_height="42dp"
             android:fontFamily="@font/font_bold"
             android:gravity="center"
-            android:text="@string/display_app_name" />
+            android:text="@string/app_name" />
 
     </LinearLayout>
 
