integrate with smart contract

--- a/app/src/main/res/layout/item_amount_display.xml
+++ b/app/src/main/res/layout/item_amount_display.xml
@@ -17,6 +17,7 @@
 
         <TextView
             style="@style/Aw.Typography.Label"
+            android:id="@+id/label_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
